Added support to firebase for sensor logs

--- a/platformio.ini
+++ b/platformio.ini
@@ -17,6 +17,8 @@ lib_deps =
 	beegee-tokyo/DHT sensor library for ESPx@^1.19
 	paulstoffregen/OneWire@^2.3.7
 	milesburton/DallasTemperature@^3.11.0
-	knolleary/PubSubClient@^2.8
 	bblanchon/ArduinoJson@^6.21.3
 	adafruit/DHT sensor library@^1.4.4
+	gilmaimon/ArduinoWebsockets@^0.5.3
+	mobizt/Firebase Arduino Client Library for ESP8266 and ESP32@^4.4.8
+	arduino-libraries/NTPClient@^3.2.1
